alteração nas imagens: artistas e contato

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <title>Inicio-sobDesign</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">    
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
-    <nav>
+    <nav class  >
         <ul type=square>
             <li><a href="#home">HOME</a></li>
             <li><a href="#sobre">SOBRE NÓS</a></li>
@@ -68,7 +68,7 @@
                     </p>
 
                     <div>
-                        <img src="img/artistas/woman-in-brown-scoop-neck-long-sleeved-blouse-painting-933255.jpg"
+                        <img src="img/artistas/artista-3.jpg"
                             class="img_padrao">
                     </div>
 
@@ -79,8 +79,8 @@
                     </div>
 
                     <div>
-                        <img src="img/artistas/woman-wearing-white-collared-shirt-standing-near-brown-easel-374767.jpg"
-                        class="img_padrao">
+                        <img src="img/artistas/artista-2.jpggi"
+                            class="img_padrao">
                     </div>
 
                     <section id="faq">
@@ -106,7 +106,7 @@
                                     Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
                                 </p>
                                 <div>
-                                    <img src="img/contato/contact-512.png" width="30px">
+                                    <img src="img/contato/email-1.png" width="30px">
                                     <p><a href="mailto:sobdesign@moda.com.br">sobdesign@moda.com.br</a></p>
                                 </div>
 
