--- a/index.html
+++ b/index.html
@@ -9,17 +9,71 @@
 </head>
 
 <body>
-    <nav class  >
-        <ul type=square>
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#sobre">SOBRE NÓS</a></li>
-            <li><a href="#colecao">COLEÇÃO EFÊMERA</a></li>
-            <li><a href="#artistas">ARTISTAS PARCEIROS</a></li>
-            <li><a href="#faq">FAQ</a></li>
-            <li><a href="#carrinho">CARRINHO</a></li>
-            <li><a href="#contato">CONTATO</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#sobre">sobDesign</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#home">HOME<span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#sobre">SOBRE NÓS</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#artistas">ARTISTAS PARCEIROS</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#colecao">COLEÇÃO EFÊMERAS</a>
+                </li>
+
+                <!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        COLEÇÃO EFÊMERA
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#colecaoatual">Camisetas</a>
+                        <a class="dropdown-item" href="#camisetas">Camisetas</a>
+                        <a class="dropdown-item" href="#regatas">Regatas</a>
+                        <a class="dropdown-item" href="#moletons">Moletons</a>
+                    </div>
+                </li> -->
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#faq">FAQ</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#contato">CONTATO</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#carrinho">CARRINHO</a>
+                </li>
+
+                <!-- <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown link
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li> -->
+            </ul>
+        </div>
     </nav>
+
+
+
 
     <header>
         <h1>sobDesign</h1>
@@ -68,8 +122,7 @@
                     </p>
 
                     <div>
-                        <img src="img/artistas/artista-3.jpg"
-                            class="img_padrao">
+                        <img src="img/artistas/artista-3.jpg" class="img_padrao">
                     </div>
 
                     <div>
@@ -79,8 +132,7 @@
                     </div>
 
                     <div>
-                        <img src="img/artistas/artista-2.jpggi"
-                            class="img_padrao">
+                        <img src="img/artistas/artista-2.jpg" class="img_padrao">
                     </div>
 
                     <section id="faq">
