add img e centralizando a sessão home

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#sobre">sobDesign</a>
+        <a class="navbar-brand" href="#sobre">sobDesign-logo</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -72,9 +72,6 @@
         </div>
     </nav>
 
-
-
-
     <header>
         <h1>sobDesign</h1>
         <p> Temos como missão colocar em pauta a produção artística contemporânea, </p>
@@ -83,24 +80,30 @@
     </header>
 
     <section id="home">
-        <h2>HOME</h2>
-        <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
-            Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi omnis.
-            Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
-        </p>
+        <div class="container-fluid home text-center">
+            <h1>HOME</h1>
+            <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
+                Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi omnis.
+                Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
+                <div>
+                    <img src="img/home/camisa-2.jpg" class="rounded-circle" width="350px" height="350px">
+                    <img src="img/home/camisa-3.jpg" class="rounded-circle" width="350px" height="350px">
+                </div>
+            </p>
+        </div>
 
         <section id="sobre">
-            <h2>SOBRE NÓS</h2>
+            <h1>SOBRE NÓS</h1>
             <p> Temos como missão colocar em pauta a produção artística contemporânea,</p>
             <p> valorizando e dando visibilidade a obra de artistas brasileiros.</p>
 
             <div>
-                <img src="img/sobre/logo-1.png" width="600px" class="img_padrao">
+                <img src="img/sobre/logo-1.png" width="600px">
             </div>
 
 
             <section id="colecao">
-                <h2>COLEÇÃO EFÊMERA</h2>
+                <h1>COLEÇÃO EFÊMERA</h1>
                 <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
                     Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi omnis.
                     Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
@@ -115,24 +118,25 @@
                 </div>
 
                 <section id="artistas">
-                    <h2>ARTISTAS PARCEIROS</h2>
+                    <h1>ARTISTAS PARCEIROS</h1>
                     <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
-                        Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi omnis.
+                        Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi
+                        omnis.
                         Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
                     </p>
+                    <div class="container">
+                        <div class="row">
+                            <div class="row-cols-lg-2">
 
-                    <div>
-                        <img src="img/artistas/artista-3.jpg" class="img_padrao">
-                    </div>
+                                <a href="https://ateliedatulipa.tumblr.com/" target="_blank">
+                                    <img src="img/artistas/tulipa-ruiz.jpg" class="img_padrao"></a>
 
-                    <div>
-                        <a href="https://ateliedatulipa.tumblr.com/" target="_blank">
-                            <img src="img/artistas/tulipa-ruiz.jpg" class="img_padrao">
-                        </a>
-                    </div>
+                                <img src="img/artistas/artista-3.jpg" class="img_padrao">
 
-                    <div>
-                        <img src="img/artistas/artista-2.jpg" class="img_padrao">
+                                <img src="img/artistas/artista-2.jpg" class="img_padrao">
+
+                            </div>
+                        </div>
                     </div>
 
                     <section id="faq">
