add colunas na sessão 'artistas-parceiros'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#sobre">sobDesign-logo</a>
+        <a class="navbar-brand" href="#sobre">sobDesign-logo.png</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -72,15 +72,16 @@
         </div>
     </nav>
 
-    <header>
-        <h1>sobDesign</h1>
-        <p> Temos como missão colocar em pauta a produção artística contemporânea, </p>
-        <p> valorizando e gerando maior visibilidade a obra de artistas brasileiros. </p>
+    <div id="centralizado" class="container-fluid home text-center">
 
-    </header>
+        <header>
+            <h1>sobDesign</h1>
+            <p> Temos como missão colocar em pauta a produção artística contemporânea, </p>
+            <p> valorizando e gerando maior visibilidade a obra de artistas brasileiros. </p>
 
-    <section id="home">
-        <div class="container-fluid home text-center">
+        </header>
+
+        <section id="home">
             <h1>HOME</h1>
             <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
                 Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi omnis.
@@ -90,7 +91,7 @@
                     <img src="img/home/camisa-3.jpg" class="rounded-circle" width="350px" height="350px">
                 </div>
             </p>
-        </div>
+        </section>
 
         <section id="sobre">
             <h1>SOBRE NÓS</h1>
@@ -100,80 +101,86 @@
             <div>
                 <img src="img/sobre/logo-1.png" width="600px">
             </div>
+        </section>
 
+        <section id="colecao">
+            <h1>COLEÇÃO EFÊMERA</h1>
+            <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
+                Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi omnis.
+                Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
+            </p>
+            <div>
+                <img src="img/colecao/camisa.png" width="300px" class="img_padrao">
+                <img src="img/colecao/moleton-flamingos.png" width="600px">
+            </div>
+        </section>
 
-            <section id="colecao">
-                <h1>COLEÇÃO EFÊMERA</h1>
-                <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
-                    Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi omnis.
-                    Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
-                </p>
+        <section id="artistas">
+            <h1>ARTISTAS PARCEIROS</h1>
+            <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
+                Anim.
+            </p>
+            <div class="container">
+                <div class="row">
 
-                <div>
-                    <img src="img/colecao/camisa.png" width="300px" class="img_padrao">
-                </div>
-
-                <div>
-                    <img src="img/colecao/moleton-flamingos.png" width="600px">
-                </div>
-
-                <section id="artistas">
-                    <h1>ARTISTAS PARCEIROS</h1>
-                    <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
-                        Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi
-                        omnis.
-                        Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
-                    </p>
-                    <div class="container">
-                        <div class="row">
-                            <div class="row-cols-lg-2">
-
-                                <a href="https://ateliedatulipa.tumblr.com/" target="_blank">
-                                    <img src="img/artistas/tulipa-ruiz.jpg" class="img_padrao"></a>
-
-                                <img src="img/artistas/artista-3.jpg" class="img_padrao">
-
-                                <img src="img/artistas/artista-2.jpg" class="img_padrao">
-
-                            </div>
-                        </div>
+                    <div class="col-lg-4">
+                        <img src="img/artistas/artista-3.jpg" width="100%">
+                        <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for
+                            commodo.
+                            Anim.
+                        </p>
                     </div>
 
-                    <section id="faq">
-                        <h2>FAQ</h2>
-                        <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
-                            Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi omnis.
-                            Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
+                    <div class="col-lg-4">
+                        <a href="https://ateliedatulipa.tumblr.com/" target="_blank">
+                            <img src="img/artistas/tulipa-ruiz.jpg" width="100%"></a>
+                        <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for
+                            commodo.
+                            Anim.
                         </p>
+                    </div>
 
-                        <section id="carrinho">
-                            <h2>CARRINHO</h2>
-                            <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
-                                Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi
-                                omnis.
-                                Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
-                            </p>
+                    <div class="col-lg-4">
+                        <img src="img/artistas/artista-2.jpg" width="100%">
+                        <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for
+                            commodo.
+                            Anim.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-                            <section id="contato">
-                                <h2>CONTATO</h2>
-                                <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
-                                    Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi
-                                    omnis.
-                                    Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
-                                </p>
-                                <div>
-                                    <img src="img/contato/email-1.png" width="30px">
-                                    <p><a href="mailto:sobdesign@moda.com.br">sobdesign@moda.com.br</a></p>
-                                </div>
+        <section id="faq">
+            <h2>FAQ</h2>
+            <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
+                Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi omnis.
+                Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
+            </p>
+        </section>
 
-                            </section>
+        <section id="carrinho">
+            <h2>CARRINHO</h2>
+            <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
+                Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi
+                omnis.
+                Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
+            </p>
+        </section>
 
-
-
+        <section id="contato">
+            <h2>CONTATO</h2>
+            <p> Natus tempora si for perspiciatis voluptas veritatis. Quo laudantium for commodo.
+                Anim. Eu exercitationem so numquam. Accusantium. Omnis ad. Ullamco ratione for nisi
+                omnis.
+                Laboris ullamco for eum eum. Fugit. Eius consectetur for dolorem nihil, for nihil.
+            </p>
+            <div>
+                <img src="img/contato/email-1.png" width="30px">
+                <p><a href="mailto:sobdesign@moda.com.br">sobdesign@moda.com.br</a></p>
+            </div>
+        </section>
+    </div>
 </body>
-
-<footer>
-    <p>Desenvolvido por Fernanda Oliveira</p>
-</footer>
 
 </html>
